--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "rm -rf dist && NODE_ENV=production babel componentes/ --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sb": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
+    "sb": "start-storybook -p 6006",
+    "sb1": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "eslintConfig": {
