--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@impulsogov/design-system",
   "description": "Impulso Gov Design System",
-  "version": "0.0.77",
+  "version": "0.0.79",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -16,7 +16,8 @@
     "@babel/preset-react": "^7.18.6",
     "dompurify": "^2.3.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "classnames": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
