--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@impulsogov/design-system",
   "description": "Impulso Gov Design System",
-  "version": "0.0.84",
+  "version": "0.0.85",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -14,10 +14,10 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "classnames": "^2.3.1",
     "dompurify": "^2.3.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "classnames": "^2.3.1"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
