--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "dompurify": "^2.3.10",
     "form-data": "^4.0.0",
+    "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
