--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "@impulsogov/designsystem": "^0.0.20",
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
     "dompurify": "^2.3.10",
