--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
     "@impulsogov/designsystem": "^0.0.20",
+    "@mdx-js/react": "^2.3.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
     "dompurify": "^2.3.10",
