--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
     "dompurify": "^2.3.10",
+    "echarts": "^5.4.1",
+    "echarts-for-react": "^3.0.2",
     "form-data": "^4.0.0",
     "next": "^13.0.3",
     "react": "^18.2.0",
