--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@impulsogov/designsystem": "^0.0.20",
     "@mdx-js/react": "^2.3.0",
+    "@mui/material": "^5.12.3",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
