--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "@impulsogov/designsystem": "^0.0.20",
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.12.3",
+    "@mui/x-data-grid": "^6.3.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
     "dompurify": "^2.3.10",
-    "echarts": "^5.4.1",
+    "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "form-data": "^4.0.0",
     "next": "^13.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-echarts-wrapper": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
