--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@impulsogov/designsystem": "^0.0.20",
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.12.3",
+    "@mui/x-data-grid": "^6.6.0",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
