--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@impulsogov/design-system",
   "description": "Impulso Gov Design System",
-  "version": "1.0.74",
+  "version": "1.0.77",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -27,13 +27,11 @@
     "echarts-for-react": "^3.0.2",
     "form-data": "^4.0.0",
     "next": "^13.0.3",
-    "nvm": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-echarts-wrapper": "^1.0.3",
     "react-to-print": "^2.14.13",
-    "styled-components": "^6.0.1",
-    "yarn": "^1.22.19"
+    "styled-components": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
