add build for windows

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build-for-windows": "del -rf dist && babel componentes/ --out-dir dist --copy-files",
     "build": "rm -rf dist && NODE_ENV=production babel componentes/ --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
