--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@impulsogov/design-system",
   "description": "Impulso Gov Design System",
-  "version": "1.0.105",
+  "version": "1.0.106",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build-for-windows": "del -rf dist && babel componentes/ --out-dir dist --copy-files",
-    "build": "babel componentes/ --out-dir dist --copy-files",
+    "build": "rm -rf dist && NODE_ENV=production babel componentes/ --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sb": "start-storybook -p 6006",
