--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@impulsogov/design-system",
   "description": "Impulso Gov Design System",
-  "version": "1.0.194",
+  "version": "1.0.180",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -22,7 +22,6 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.1",
-    "cpf-cnpj-validator": "^1.0.3",
     "dompurify": "^2.3.10",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
@@ -38,7 +37,7 @@
     "start": "react-scripts start",
     "build-for-windows": "del -rf dist && babel componentes/ --out-dir dist --copy-files",
     "build": "rm -rf dist && NODE_ENV=production babel componentes/ --out-dir dist --copy-files",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "sb": "start-storybook -p 6006",
     "sb1": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
@@ -76,8 +75,13 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/theming": "^6.5.13",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "babel-loader": "^8.2.5",
     "classnames": "^2.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "storybook-css-modules": "^1.0.8"
   }
 }
