--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "build-for-windows": "del -rf dist && babel componentes/ --out-dir dist --copy-files",
     "build": "rm -rf dist && NODE_ENV=production babel componentes/ --out-dir dist --copy-files",
     "test": "jest",
+    "test:coverage": "jest --coverage --watchAll=false --bail",
     "eject": "react-scripts eject",
     "sb": "start-storybook -p 6006",
     "sb1": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
