--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "babel-loader": "^8.2.5",
     "classnames": "^2.3.1",
     "jest": "^29.7.0",
