--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-echarts-wrapper": "^1.0.3",
+    "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.14.13",
     "styled-components": "^6.0.1"
   },
