--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "dompurify": "^2.3.10",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
+    "eslint-config-next": "13",
     "form-data": "^4.0.0",
-    "next": "^13.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-echarts-wrapper": "^1.0.3",
     "react-to-print": "^2.14.13",
     "styled-components": "^6.0.1"
@@ -42,9 +43,9 @@
     "test:watch": "jest --coverage=false --watch",
     "test:coverage": "jest --coverage --watchAll=false --bail",
     "eject": "react-scripts eject",
-    "sb": "start-storybook -p 6006",
-    "sb1": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "sb": "storybook dev -p 6006",
+    "sb1": "export NODE_OPTIONS=--openssl-legacy-provider && storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
@@ -68,16 +69,18 @@
     "access": "public"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/addons": "^6.5.13",
-    "@storybook/builder-webpack4": "^6.5.9",
-    "@storybook/manager-webpack4": "^6.5.9",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.13",
+    "@chromatic-com/storybook": "^1",
+    "@storybook/addon-actions": "^8.1.11",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-mdx-gfm": "^8.1.11",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/nextjs": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^8.1.11",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -86,6 +89,7 @@
     "classnames": "^2.3.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "storybook": "^8.1.11",
     "storybook-css-modules": "^1.0.8"
   }
 }
